[package]
name          = "std-logger"
description   = """
A logging implementation for the log crate that logs messages to standard
error and requests to standard out.
"""
version       = "0.3.6"
authors       = ["Thomas de Zeeuw <thomasdezeeuw@gmail.com>"]
license       = "MIT/Apache-2.0"
documentation = "https://docs.rs/std-logger"
repository    = "https://github.com/Thomasdezeeuw/std-logger"
readme        = "README.md"
keywords      = ["logging", "log", "standard"]
categories    = ["development-tools::debugging"]
include       = ["Cargo.toml", "src/lib.rs", "src/format.rs", "README.md", "LICENSE-MIT", "LICENSE-APACHE"]
edition       = "2018"

[badges]
travis-ci = { repository = "Thomasdezeeuw/std-logger" }
appveyor  = { repository = "Thomasdezeeuw/std-logger", service = "github" }

[features]
default   = ["timestamp", "log-panic"]
log-panic = ["log-panics"]
timestamp = ["chrono"]

[dependencies]
chrono     = { version = "0.4.19", optional = true, default-features = false, features = ["clock"] }
itoa       = { version = "0.4.7", default-features = false }
log        = { version = "0.4.13", default-features = false, features = ["kv_unstable_std", "kv_unstable_sval"], git = "https://github.com/rust-lang/log" }
sval       = { version = "1.0.0-alpha.4" }
log-panics = { version = "2.0.0", optional = true, default-features = false, features = ["with-backtrace"] }
ryu        = { version = "1.0.5", default-features = false }

[dev-dependencies]
criterion   = "0.2"
lazy_static = "1.0"
libc        = "0.2"

[[bench]]
name = "time_format"
path = "benches/time_format.rs"
harness = false

[[bench]]
name = "standard_out"
path = "benches/standard_out.rs"
harness = false

# TODO: replace with published crate.
[patch.crates-io]
log = { git = "https://github.com/rust-lang/log", rev = "dec098261819771ae1f22cd85f306ec71f23fd85", default-features = false, features = ["std", "kv_unstable"] }
